testsuite/tests/lexical_envs/invalid_subunit_root/ple_unit_root_field.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list+(example)
    example <- Example("example" ?example)
}

class FooNode implements Node[FooNode] {
}

@ple_unit_root class Example: FooNode {
    @parse_field @nullable child: Example
}
